@@ -44,6 +44,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15480: Remove the deprecated and unused TYPE_INT64 code from marshal.
+  Initial patch by Daniel Riti.
+
 - Issue #2118: SMTPException is now a subclass of IOError.
 
 - Issue #17016: Get rid of possible pointer wraparounds and integer overflows
